<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_requests">Propostas</string>
    <string name="new_request_activity_title">Nova Proposta</string>
    <string name="request_commentaty_title">Comentários</string>
    <string name="auth_failure">Falha na autenticação</string>
    <string name="app_name">Hive</string>
    <string name="feed">Feed</string>
    <string name="associationRef">Associação</string>
    <string name="shop">Loja</string>
    <string name="map">Mapa</string>
    <string name="home">Home</string>
    <string name="welcome_text"><b>Bem-vindo a sua Colméia</b></string>
    <string name="login">Login</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="forgot_password"><u>Esqueci minha senha</u></string>
    <string name="sign_up"><u>Ainda não faz parte de uma colméia? Junte-se a nós :)</u></string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="hi_header">Nos fale sobre você :)</string>
    <string name="my_name_is">Olá, o meu nome é</string>
    <string name="born">eu nasci dia</string>
    <string name="my_cpf">e o meu CPF é</string>
    <string name="email">e email</string>
    <string name="email_login">Email</string>
    <string name="my_password_be">Quero que a minha senha seja:</string>
    <string name="terms">Eu li e concordo com os <u><i>Termos e Condições</i></u></string>
    <string name="ready">Pronto</string>
    <string name="other_login_methods">Outros métodos de login</string>
    <string name="h_name"><i>Seu nome completo:</i></string>
    <string name="h_ddmmaa"><i>Sua data de Aniversário!</i></string>
    <string name="h_cpf"><i>Digite seu CPF:</i></string>
    <string name="h_email"><i>Seu email:</i></string>
    <string name="h_password_conf"><i>Senha:</i></string>
    <string name="h_password_conf_again"><i>Confirme a Senha:</i></string>
    <string name="today">O que você deseja fazer hoje?</string>
    <string name="signup_problem">Houve algum problema para enviar os seus dados, por favor faça o login novamente</string>
    <string name="select_associations">Selecione as associações que você participa, enviaremos um pedido de ingresso para você :)</string>
    <string name="should_select_one_association">Por favor selecione pelo menos uma associação que você participe</string>
    <string name="req">Propostas</string>
    <string name="vote">Votações</string>
    <string name="trans">Transparência</string>
    <string name="assembleia">Assembléias</string>
    <string name="transparency_activity_title">Transparência</string>
    <string name="no_association">Você ainda não está vinculado a nenhuma associação, espere a associação aprová-lo ou contate a mesma se o problema persistir</string>
    <string name="request_title_label">Título</string>
    <string name="request_cost_label">Custo estimado</string>
    <string name="request_description_label">Descrição</string>
    <string name="save">Salvar</string>
    <string name="new_request_budget_category_label_tv">Tipo de Despesa:</string>
    <string name="new_request_category_label_tv">Categorias da Proposta:</string>
    <string name="new_request_location_label">Localização</string>
    <string name="new_request_current_budget_string1">*Há R$ \u0020</string>
    <string name="new_request_current_budget_string2">\u0020 disponíveis </string>
    <string name="new_request_current_budget_ordinary_string">\u0020 para despesas ordinárias. </string>
    <string name="new_request_current_budget_savings_string">\u0020 no fundo de reserva. </string>
    <string name="new_request_current_budget_extraordinary_string">\u0020 para despesas extraordinárias. </string>
    <string name="new_request_should_have_category">Classifique a sua proposta em uma das categorias.</string>
    <string name="new_request_should_have_budget_category">Classifique a sua proposta em uma das categorias de custo.</string>
    <string name="new_request_should_have_title">Qual o título da sua proposta?</string>
    <string name="new_request_should_have_cost">Qual o custo estimado para esta proposta?</string>
    <string name="new_request_should_have_location">Onde a sua proposta se aplica?</string>
    <string name="should_text">Qual é o seu comentário?</string>
    <string name="your_comment">Escreva um comentário…</string>
    <string name="facebook_app_id">177801062854821</string>
    <string name="fb_login_protocol_scheme">fb165818667480912</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="title_activity_nrequest">NRequestActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget_category_ordinary">Orinária</string>
    <string name="budget_category_savings">Fundo de Reserva</string>
    <string name="budget_category_extraordinary">Extraordinária</string>
    <string name="budget_category_no_cost">Sem custo</string>
    <string name="ic_budget_category_savings">Ícone de cofrinho</string>
    <string name="ic_comment">Ícone de Comentário</string>
    <string name="ic_support">Ícone de Coração</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="pattern_title">Título da Pauta</string>
    <string name="zeroin3">000</string>
    <string name="fake_time">00d, 00hrs, 00 min</string>
    <string name="suggested">Sugerida por:</string>
    <string name="lore_ipsun">Risus in hendrerit gravida rutrum quisque non. Porttitor leo a diam sollicitudin. Sem viverra aliquet eget sit. Purus in massa tempor nec feugiat. Id venenatis a condimentum vitae. Gravida rutrum quisque non tellus orci ac auctor augue mauris. Risus commodo viverra maecenas accumsan lacus vel. Arcu vitae elementum curabitur vitae nunc sed. Et netus et malesuada fames. Feugiat nisl pretium fusce id velit ut.  </string>
    <string name="partial_results">Resultados parciais:</string>
    <string name="has_vote">Você já votou nesta pauta. :)</string>
    <string name="hasn_vote">Você ainda não votou nesta pauta</string>
    <string name="final_result">Resultados finais: </string>
    <string name="no_voters"> Esta pauta ainda não foi levada para votação. </string>
    <string name="created_by_association">Esta pauta foi criada pela administração da associação.</string>
    <string name="hard_coded_i_do_like_pdfs_3"><![CDATA[HARD CODED. I DO LIKE PDFs <3]]></string>
    <string name="total_applied"><i>Total investido:</i></string>
    <string name="initial_money">R$ 000,000,000</string>
    <string name="details">Detalhes</string>
    <string name="downloading">Iniciando o download do arquivo</string>
    <string name="chooseApp">Escolha um app para visualização do pdf.</string>
    <string name="setting">Setting</string>
    <string name="circle_layout_manger">Circle LayoutManager</string>
    <string name="circle_scale_layout_manager">Circle Scale LayoutManager</string>
    <string name="carousel_layout_manager">Carousel LayoutManager</string>
    <string name="gallery_layout_manager">Gallery LayoutManager</string>
    <string name="rotate_layout_manager">Rotate LayoutManager</string>
    <string name="scale_layout_manager">Scale LayoutManager</string>
    <string name="radius">Radius</string>
    <string name="item_space">Item Space</string>
    <string name="move_speed">Move Speed</string>
    <string name="distance_to_bottom">Distance To Bottom</string>
    <string name="angle_interval">Interval Angle</string>
    <string name="center_scale">Center Scale</string>
    <string name="rotate_angle">Rotate Angle</string>
    <string name="min_scale">Min Scale</string>
    <string name="max_alpha">Max Alpha</string>
    <string name="min_alpha">Min Alpha</string>
    <string name="toggle_infinite">Toggle Infinite</string>
    <string name="toggle_bring_center_in_front">Toggle Bring Center In Front</string>
    <string name="toggle_reverse_rotate">Toggle Reverse Rotate</string>
    <string name="toggle_auto_center">Toggle Auto Center</string>
    <string name="toggle_reverse">Toggle Reverse</string>
    <string name="flip_rotate">Flip Rotate</string>
    <string name="rotate_from_edge">Rotate From Edge</string>
    <string name="change_orientation">Change Orientation</string>
    <string name="gravity">Gravity</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="z_alignment">Z-Alignment</string>
    <string name="left_on_top">Left On Top</string>
    <string name="right_on_top">Right On Top</string>
    <string name="center_on_top">Center On Top</string>
    <string name="action_settings">Settings</string>
    <string name="horizontal_timeline">Horizontal Timeline</string>
    <string name="vertical_timeline">Vertical Timeline</string>
    <string name="horizontal_timeline_w_padding">Horizontal Timeline With Line Padding</string>
    <string name="vertical_timeline_w_padding">Vertical Timeline With Line Padding</string>
    <string name="parque_una">Parque Una</string>
    <string name="request_category_security">Segurança</string>
    <string name="request_category_gardening">Jardinagem</string>
    <string name="request_category_maintenance">Manuntenção</string>
    <string name="request_category_cleaning">Limpeza</string>
    <string name="request_category_others">Outra</string>
    <string name="session_fin">Sessão finalizada</string>
    <string name="days"> dias </string>
    <string name="hours"> horas </string>
    <string name="minutes"> minutos</string>
    <string name="current_no_agendas" tools:ignore="Typos">Não há pautas nesse momento</string>
    <string name="future_no_agendas">Ainda não há nenhuma pauta planejada para o futuro</string>
    <string name="past_no_agendas">Sua associação ainda não possui nenhuma votação finalizada.</string>
    <string name="should_answer"> Dê a sua opnião nesta questão para visualizar a próxima. :)</string>
    <string name="all_questions">Por favor dê sua opinião em todas questões.</string>
    <string name="vote_ok">Seu voto foi contabilizado.</string>
</resources>