<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/all"
        android:title="@string/home"
        android:icon="@drawable/ic_category_all"
        />
    <item
        android:id="@+id/security"
        android:title="@string/feed"
        android:icon="@drawable/ic_category_security"
        />
    <item
        android:id="@+id/services"
        android:title="@string/associationRef"
        android:icon="@drawable/ic_category_services"
        />
    <item
        android:id="@+id/gardening"
        android:title="@string/home"
        android:icon="@drawable/ic_category_gardening"
        />
    <item
        android:id="@+id/cleaning"
        android:title="@string/feed"
        android:icon="@drawable/ic_category_cleaning"
        />
 </menu>