<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:paddingLeft="22dp"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:orientation="vertical"
    tools:context="com.hive.hive.login.LoginActivity">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/helloTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="25dp"
                android:paddingTop="10dp"
                android:text="@string/hi_header"
                android:textColor="#000000"
                android:textSize="22sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewSignUpFullNameUpperName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textViewSignUpFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:hint="@string/h_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewSignUpBirthdayUpperName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textViewSignUpBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:imeOptions="actionNext"
                    android:hint="@string/h_ddmmaa"
                    />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_bar_signup"
                android:layout_gravity="center"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewSignUpCPFUpperName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textViewSignUpCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:hint="@string/h_cpf"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewSignUpEmailUpperName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textViewSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/h_email"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:paddingTop="40dp"
                android:paddingBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonSignUpTermsAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="#000000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/termsAgreementTV"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="bottom"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:text="@string/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonSignUpComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorOrange"
                android:text="@string/ready"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

