<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/budgetCV"
        app:cardElevation="4dp"
        android:shadowDx="0"
        android:shadowDy="30"
        android:shadowColor="#000">
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:paddingRight="30dp"
                android:layout_gravity="left"
                android:gravity="left|center_vertical|center_horizontal"
                app:srcCompat="@drawable/ic_category_gardening"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <LinearLayout
                android:gravity="left"
                android:layout_marginLeft="90dp"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


                <TextView
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:text="@string/client_name_mock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/budgetNameTV"
                    />

                <TextView
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:text="@string/total_applied"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/budgetTotalAppliedTV"
                    />

                <TextView
                    android:textColor="@color/colorOrange"
                    android:textSize="20sp"
                    android:text="@string/initial_money"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/budgetValueTV"
                    />

            </LinearLayout>

            <TextView
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:text="@string/details"
                android:layout_gravity="bottom|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/budgetDetailsTV"
                />

        </FrameLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>