<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/bgContent"
    app:cardElevation="4dp"
    android:shadowDx="0"
    android:shadowDy="30"
    android:shadowColor="#000"
    android:orientation="horizontal">

    <!-- LEFT TITLE PART -->
    <RelativeLayout
        android:paddingLeft="-40dp"
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_gravity="left"
        android:orientation="vertical">
        <ImageView
            android:text="@string/assembleia"
            android:id="@+id/category_IV"
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:background="@drawable/ic_category_gardening" />
    </RelativeLayout>
    <!-- RIGHT TITLE PART -->
    <LinearLayout
        android:layout_marginLeft="100dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:paddingRight="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:text="@string/pattern_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/budgetNameTV"/>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_support_borderline"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:text="@string/zeroin3"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/budgetTotalAppliedTV"/>


        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/ic_clock"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:gravity="left"
                android:text="@string/fake_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>