<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:orientation="vertical"
    tools:context="com.hive.hive.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:src="@drawable/city_login"/>

        <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/logo"/>

    </FrameLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textColor="#000000"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/text_google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"></com.google.android.gms.common.SignInButton>

    </LinearLayout>

    <!--BOTTOM LINKS-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="13sp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</RelativeLayout>
