<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        app:srcCompat="@drawable/ic_profile_photo"
        android:layout_gravity="top|left"
        android:layout_width="85dp"
        android:layout_height="75dp" />

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        app:srcCompat="@drawable/coin"
        android:layout_gravity="top|right"
        android:layout_width="45dp"
        android:layout_height="45dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:text="0000"
        android:layout_marginTop="35dp"
        android:layout_marginRight="15dp"
        app:srcCompat="@drawable/coin"
        android:layout_gravity="top|right"
         />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorOrange"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="left"
            android:text="@string/req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:layout_marginLeft="13dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="left"
            android:id="@+id/requestsBT"
            android:background="@drawable/ic_requisicoes"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/req"/>

        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorOrange"
            android:layout_marginRight="35dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="right"
            android:text="@string/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:layout_marginRight="13dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="right"
            android:id="@+id/trasnparencyBT"
            android:background="@drawable/ic_transparencia"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/trans" />

        <ImageButton
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal|bottom"
            android:id="@+id/voteBT"
            android:background="@drawable/ic_assembleias"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/vote" />
        <TextView
            android:layout_marginTop="100dp"
            android:textSize="16sp"
            android:textColor="@color/colorOrange"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</FrameLayout>
